--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-primary: 0, 0, 0;
+  --color-secondary: 255, 255, 255;
+  --background-color: 247, 247, 250;
 }
 
 /* @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --color-primary: 255, 255, 255;
+    --color-secondary: 0, 0, 0;
   }
 } */
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background:(var(--background-end-rgb))
+  color: rgb(var(--color-primary));
+  background-color: rgb(var(--background-color));
 }
